--- a/Pokemon.html
+++ b/Pokemon.html
@@ -1,3 +1,10 @@
-<svg width = "1000" height= "1000">
-
-</svg>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="Pokemon.html"  herf="Pokemon.css">
+</head>
+<body>
+  </svg>
+</body>
+</html>
