--- a/Pokemon.html
+++ b/Pokemon.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="Pokemon.html"  herf="Pokemon.css">
+  <link rel="stylesheet" href="Pokemon.css">
 </head>
 <body>
-  </svg>
+  <svg width="100%" viewBox="0 0 200 100">
+  <image x="30" y="-09" width="80" height="80" xlink:href="http://play.pokemonshowdown.com/sprites/xyani-back/giratina-origin.gif"/>
+  <image x="110" y="-09" width="80" height="80" xlink:href="http://orig05.deviantart.net/20e3/f/2014/227/0/0/pikahcu_pokemon_x_and_y_by_wittnebenbrian-d7v97vf.gif"/>
+</svg>
 </body>
 </html>
